# pikru

./: .gitignore  .mcp.json  CHANGELOG.md  CLAUDE.md  Cargo.toml  DESIGN.md  LICENSE-APACHE  PARITY_PLAN.md  PLAN-direction-refactor.md  PLAN-y-flip.md  README.md  README.md.in  REFACTOR_PLAN.md  STRONG_TYPES.md  TYPES.md  ci.sh  comparison.html  debug_chop.pikchr  debug_chop_test.rs  debug_minimal.pikchr  debug_rust_test.rs  pikru-mcp-wrapper.sh
.claude/: CLAUDE.md  settings.local.json
.claude/commands/: crate-version.md  trace.md
.config/captain/: config.styx
.config/captain/readme-templates/: readme-footer.md  readme-header.md
.github/workflows/: ci.yml  pages.yml
crates/pikru-compare/: Cargo.toml
crates/pikru-compare/src/: lib.rs
crates/pikru-mcp/: Cargo.toml
crates/pikru-mcp/.claude/: settings.local.json
crates/pikru-mcp/src/: handler.rs  main.rs  tools.rs
examples/: .compare_all.rs.swp  allnew.rs  check_gaps.rs  chop.rs  compare_all.rs  compare_svg.rs  css_vars.rs  debug_expr2.rs  debug_heading.rs  debug_parse.rs  debug_svg.rs  dots.rs  fill.rs  fit.rs  fromto.rs  hexcolor.rs  multiseg.rs  render.rs  rounded.rs  shapes.rs  simple.rs  sublist.rs  test_file.rs  test_macro.rs  textpos.rs  textstyle.rs
facet-svg/: Cargo.toml
facet-svg/src/: lib.rs  path.rs  style.rs
mcp-server/: pikru_test_server.py
scripts/: install-hooks.sh  pre-commit
src/: ast.rs  compare.rs  errors.rs  lib.rs  log.rs  macros.rs  parse.rs  pikchr.pest  render.rs  types.rs
src/render/: context.rs  defaults.rs  eval.rs  geometry.rs  mod.rs  path_builder.rs  shapes.rs  svg.rs  types.rs
static/: comparison.css  comparison.js
tests/: pikchr_tests.rs  test32_debug.rs
tests/grammar-gaps/: gap01-nth-object-of-in.pikchr  gap02-ccw.pikchr  gap03-previous-class.pikchr  gap04-ordinal-subpicture.pikchr  gap05-diameter.pikchr  gap06-heading-from-position.pikchr  gap07-of-the-way-between.pikchr  gap08-invisible-longform.pikchr  gap09-dot-properties.pikchr  gap10-compass-path.pikchr
xtask/: Cargo.toml
xtask/src/: main.rs
