[package]
name = "pikru"
version = "0.1.0"
edition = "2024"

[dependencies]
camino = "1.2.1"
miette = "7.6.0"
pest = "2.8.4"
pest_derive = "2.8.4"
rootcause = "0.10.0"
time = { version = "0.3.44", features = ["formatting", "macros"] }

[dev-dependencies]
insta = { version = "1.42", features = ["glob"] }
datatest-stable = "0.3"
dissimilar = "1.0"
regex-lite = "0.1.8"
roxmltree = "0.20"

[[test]]
name = "pikchr_tests"
harness = false
