[workspace]
members = ["facet-svg", "xtask"]

[package]
name = "pikru"
version = "0.1.0"
edition = "2024"
exclude = ["vendor/**"]

[dependencies]
camino = "1.2.1"
miette = { version = "7.6.0", features = ["fancy"] }
pest = "2.8.4"
pest_derive = "2.8.4"
rootcause = "0.10.0"
time = { version = "0.3.44", features = ["formatting", "macros"] }
facet-svg = { path = "facet-svg" }

[dev-dependencies]
insta = { version = "1.42", features = ["glob"] }
datatest-stable = "0.3"
dissimilar = "1.0"
regex-lite = "0.1.8"

[[test]]
name = "pikchr_tests"
harness = false
