[package]
name = "facet-svg"
version = "0.1.0"
edition = "2024"
description = "Facet-derived types for SVG parsing and serialization"
license = "MIT OR Apache-2.0"

[dependencies]
facet = { path = "../../facet/facet" }
facet-xml = { path = "../../facet/facet-xml" }
facet-assert = { path = "../../facet/facet-assert" }
