[package]
name = "pikru-compare"
version = "1.0.1"
edition = "2024"
publish = false

[package.metadata]

[package.metadata."docs.rs"]
rustdoc-args = ["--html-in-header", "arborium-header.html"]

[dependencies]
facet-svg = { git = "https://github.com/facet-rs/facet", branch = "main" }
facet-assert = { git = "https://github.com/facet-rs/facet", branch = "main" }
camino = "1.2.1"

# Visual comparison
resvg = "0.45"
usvg = "0.45"
tiny-skia = "0.11"
image = { version = "0.25", default-features = false, features = ["png"] }
image-compare = "0.5"
